--- a/style2.css
+++ b/style2.css
@@ -4,7 +4,7 @@ body {
     background-color: #f4f4f9;
     margin: 0;
     padding: 20px;
-    background-image: url(/images/parking.jpg);
+    background-image: url(images/parking.jpg);
     background-size: cover;
     background-position: center;
     
